# codex_ball

./: .gitignore  README.md  app.py  doc1  pyproject.toml
src/cfbmeta/: __init__.py  analysis.py  cli.py  data_fetcher.py  models.py
tests/: test_analysis.py
tests/data/: espn_scoreboard_sample.json
