[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cfbmeta"
version = "0.1.0"
description = "College football TV and scoreboard meta guide"
authors = [{name = "Code Assistant"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[project.scripts]
cfbmeta = "cfbmeta.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
